fix spacing for menu button + header bar

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,5 +1,3 @@
-.logo-container {
-  & img {
-    width: 3rem
-  }
+.logo {
+  width: 3rem;
 }
